src/tests/noArrayIndexKey/invalid/case#6/index.jsx
import React from 'react';

const MeuComponente = (props) => {
    return (
        <div>
            {foo.filter((bar, i) => { baz.push(<Foo key={i} />); })}
        </div>
    );
};

export default MeuComponente;

